Source up to 17! Dark Mode! Upgraded to new App Bundler that handles Java 17! Restructured to avoid @UnderInitialization. Lots of suppression warnings fixed. Upgraded Hamcrest library to 2.2 Updated sqlite-jdbc dependency to 3.42.0.0 (from 3.36.0.3) Use new ClearableTextField paradigm