@@ -4,11 +4,11 @@
 
   <groupId>neptunedreams.com</groupId>
   <artifactId>job.search</artifactId>
-  <version>0.2.18-SNAPSHOT</version>
-  <name>Job Search</name>
+  <version>0.2.19-SNAPSHOT</version>
+<!--  <name>Job Search</name>-->
   <packaging>jar</packaging>
 
-  <url>http://maven.apache.org</url>
+  <url>https://maven.apache.org</url>
   <developers>
     <developer>
       <id>SwingGuy1024</id>
@@ -18,14 +18,16 @@
   </developers>
 	
 	<!--
-	Note: The checker framework documentation says to include some references to a google library called "errorProne."
+	Note: The checker framework documentation says to include some references to a Google library called "errorProne."
 	It should be a dependency, have a property set to refer to it, and should have a compiler argument set.
 	However, if I do this, I break the build. The solution is to remove the compiler argument. That argument is this:
 	<arg>-J-Xbootclasspath/p:${errorProneJavac}</arg>
 	-->
 
   <properties>
+    <appName>Job Search</appName>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.release>17</maven.compiler.release>
 
     <!-- These properties will be set by the Maven Dependency plugin -->
     <!--suppress UnresolvedMavenProperty -->
@@ -41,8 +43,9 @@
 	  <dependency>
 		  <groupId>com.neptunedreams</groupId>
 		  <artifactId>tango</artifactId>
-		  <version>2.0.19-SNAPSHOT</version>
+      <version>2.0.21-SNAPSHOT</version>
 	  </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -50,12 +53,11 @@
       <scope>test</scope>
     </dependency>
 
-
     <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
-      <version>3.36.0.3</version>
+      <version>3.42.0.0</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
@@ -76,7 +78,7 @@
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-library</artifactId>
-      <version>1.1</version>
+      <version>2.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -84,20 +86,14 @@
     <dependency>
       <groupId>org.checkerframework</groupId>
       <artifactId>checker-qual</artifactId>
-      <version>3.2.0</version>
-    </dependency>
-    <!-- If using JDK 8, add the following additional dependencies -->
-    <dependency>
-      <groupId>org.checkerframework</groupId>
-      <artifactId>jdk8</artifactId>
-      <version>3.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.errorprone</groupId>
-      <artifactId>javac</artifactId>
-      <version>9+181-r4173-1</version>
+      <version>3.39.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.formdev</groupId>
+      <artifactId>flatlaf</artifactId>
+      <version>3.2.2</version>
+    </dependency>
   </dependencies>
   
   <build>
@@ -106,13 +102,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
         <configuration>
           <fork>true</fork>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>17</source>
+          <target>17</target>
           <compilerArguments>
-            <Xmaxerrs>10000</Xmaxerrs>
-            <Xmaxwarns>10000</Xmaxwarns>
+<!--            <Xmaxerrs>10000</Xmaxerrs>-->
+<!--            <Xmaxwarns>10000</Xmaxwarns>-->
             <!--<AsuppressWarnings>uninitialized</AsuppressWarnings>-->
           </compilerArguments>
           <!-- Reveals bugs in stubs. -->
@@ -121,7 +118,7 @@
             <path>
               <groupId>org.checkerframework</groupId>
               <artifactId>checker</artifactId>
-              <version>3.2.0</version>
+              <version>3.39.0</version>
             </path>
           </annotationProcessorPaths>
           <annotationProcessors>
@@ -132,12 +129,15 @@
             <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
           </annotationProcessors>
           <compilerArgs>
-            <!-- If using JDK 8, use only the two arguments immediately below. -->
-            <arg>-J-Xbootclasspath/p:${errorProneJavac}</arg>
-            <arg>-Xbootclasspath/p:${annotatedJdk}</arg>
-            <!-- If using JDK 11, remove the two arguments above, remove the
-								 space in the one below, and uncomment it. -->
-            <!-- <arg>-J- -add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg> -->
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
 
             <!-- Optionally, -Awarns turns type-checking errors into warnings. -->
 <!--            <arg>-Awarns</arg>-->
@@ -148,7 +148,8 @@
             <arg>-AstubWarnIfNotFound</arg>
           </compilerArgs>
         </configuration>
-        <version>3.8.1</version>
+        <!-- I don't know if I need this. -->
+<!--        <version>3.8.1</version>-->
       </plugin>
 
       <plugin>
@@ -157,7 +158,7 @@
         <version>2.5</version>
         <configuration>
           <systemPropertyVariables>
-            <derby.system.home>${user.home}/.jobsearch}</derby.system.home>
+<!--            <derby.system.home>${user.home}/.jobsearch}</derby.system.home>-->
             <buildDirectory>${project.build.directory}</buildDirectory>
           </systemPropertyVariables>
         </configuration>
@@ -165,7 +166,9 @@
 
       <!--This packs all the classes into a single jar-->
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.6.0</version>
         <configuration>
           <archive>
             <manifest>
@@ -186,6 +189,7 @@
         <!--This is the Maven dependency plugin.-->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.1.1</version>
         <executions>
           <execution>
             <id>copy-dependencies</id>
@@ -213,9 +217,6 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>2.6</version>
         <configuration>
-          <!--<detail>-->
-            <!--<derby.system.home>${user.home}/.jobs</derby.system.home>-->
-          <!--</detail>-->
           <archive>
             <manifest>
               <mainClass>com.neptunedreams.jobs.JobSearch</mainClass>
@@ -224,20 +225,37 @@
         </configuration>
       </plugin>
       
-      <!--This one will bundle everything into a Mac Application bundle.-->
+      <!--      This is an alternate plugin to bundle everything into a Mac Application Bundle, which-->
+      <!--      I added to support Java 17.-->
+      <!-- Source: https://github.com/perdian/macosappbundler-maven-plugin -->
       <plugin>
-        <!-- https://github.com/federkasten/appbundle-maven-plugin -->
-        <groupId>sh.tak.appbundler</groupId>
-        <artifactId>appbundle-maven-plugin</artifactId>
-        <version>1.2.0</version>
+        <groupId>de.perdian.maven.plugins</groupId>
+        <artifactId>macosappbundler-maven-plugin</artifactId>
+        <version>1.20.0</version>
         <configuration>
-          <!--Put your custom Info.plist and Icon.icns under your maven resource paths (src/main/resources on default configuration).-->
-          <mainClass>com.neptunedreams.jobs.JobSearch</mainClass>
-          <!--<dictionaryFile>YourCustomInfo.plist</dictionaryFile>-->
-          <iconFile>binoculars.icns</iconFile>
-          <!-- Put this line in to bundle the jdk with the app. -->
-          <!--suppress UnresolvedMavenProperty -->
-<!--          <jrePath>${env.JAVA_HOME}/../../</jrePath>-->
+          <plist>
+
+            <CFBundleIconFile>src/main/resources/binoculars.icns</CFBundleIconFile>
+            <CFBundleDisplayName>Job Search</CFBundleDisplayName>
+            <CFBundleDevelopmentRegion>English</CFBundleDevelopmentRegion>
+            <CFBundleURLTypes>
+              <string>msa</string>
+            </CFBundleURLTypes>
+            <JVMMainClassName>com.neptunedreams.jobs.JobSearch</JVMMainClassName>
+            <JVMVersion>17+</JVMVersion>
+            <!--            <JVMRuntimePath>(unused)</JVMRuntimePath>-->
+            <!--            <JVMOptions>-->
+            <!--              <string>-Dfoo=bar</string>-->
+            <!--              <string>-Dx=y</string>-->
+            <!--            </JVMOptions>-->
+            <!--            <JVMArguments>-->
+            <!--              <string>-example</string>-->
+            <!--              <string>${someProperty}</string>-->
+            <!--            </JVMArguments>-->
+          </plist>
+<!--          <codesign>-->
+<!--            <identity>3rd Party Mac Developer Application: MyName (MyNumber)</identity>-->
+<!--          </codesign>-->
         </configuration>
         <executions>
           <execution>
@@ -276,19 +294,10 @@
         <!-- Manage the plugin's dependency. -->
         <dependencies>
           <dependency>
-            <!--<groupId>org.apache.derby</groupId>-->
-            <!--<artifactId>derby</artifactId>-->
-            <!--<version>10.14.1.0</version>-->
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.20.1</version>
+            <version>3.41.2.2</version>
           </dependency>
-          <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-          <!--<dependency>-->
-            <!--<groupId>javax.xml.bind</groupId>-->
-            <!--<artifactId>jaxb-api</artifactId>-->
-            <!--<version>2.3.1</version>-->
-          <!--</dependency>-->
         </dependencies>
 
         <!-- Specify the plugin configuration.
@@ -308,7 +317,6 @@
           <!-- Generator parameters -->
           <generator>
             <database>
-              <!--<name>org.jooq.util.derby.DerbyDatabase</name>-->
               <name>org.jooq.meta.sqlite.SQLiteDatabase</name>
               <includes>.*</includes>
               <!--<excludes></excludes>-->
@@ -336,7 +344,6 @@
           <cleanupDaemonThreads>false</cleanupDaemonThreads>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 </project>
